# ChangeLog for dev-python/shiboken
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/shiboken/ChangeLog,v 1.14 2011/12/27 09:03:20 patrick Exp $

*shiboken-1.0.10 (27 Dec 2011)

  27 Dec 2011; Patrick Lauer <patrick@gentoo.org> +shiboken-1.0.10.ebuild,
  shiboken-1.0.9.ebuild:
  Bump

*shiboken-1.0.9 (27 Dec 2011)

  27 Dec 2011; Patrick Lauer <patrick@gentoo.org>
  +files/shiboken-1.0.9-fix-pkgconfig.patch, +shiboken-1.0.9.ebuild:
  Bump

  13 Sep 2011; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, bug #278944

*shiboken-1.0.6 (06 Sep 2011)

  06 Sep 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  -shiboken-0.5.1-r1.ebuild, -files/shiboken-0.5.1-fix-pkgconfig.patch,
  -shiboken-1.0.0.ebuild, -files/shiboken-1.0.0-fix-pkgconfig.patch,
  -shiboken-1.0.3.ebuild, +shiboken-1.0.6.ebuild,
  +files/shiboken-1.0.6-fix-pkgconfig.patch:
  Version bump to latest release. Cleanup ebuild. Remove older.

  28 Jul 2011; Patrick Lauer <patrick@gentoo.org> shiboken-1.0.3.ebuild:
  Small dep fixes for #369823

*shiboken-1.0.3 (27 May 2011)

  27 May 2011; Tomas Touceda <chiiph@gentoo.org> +shiboken-1.0.3.ebuild,
  +files/shiboken-1.0.3-fix-pkgconfig.patch:
  Version bump

*shiboken-1.0.0 (20 Mar 2011)

  20 Mar 2011; Tomas Touceda <chiiph@gentoo.org> +shiboken-1.0.0.ebuild,
  +files/shiboken-1.0.0-fix-pkgconfig.patch:
  Version bump

*shiboken-0.5.1-r1 (29 Dec 2010)

  29 Dec 2010; Dominik Kapusta <ayoy@gentoo.org> -shiboken-0.5.1.ebuild,
  +shiboken-0.5.1-r1.ebuild:
  Specifying correct dependency on Python

*shiboken-0.5.1 (25 Nov 2010)

  25 Nov 2010; Tomas Touceda <chiiph@gentoo.org> -shiboken-0.3.2.ebuild,
  -shiboken-0.4.0.ebuild, -shiboken-0.5.0-r1.ebuild, +shiboken-0.5.1.ebuild,
  +files/shiboken-0.5.1-fix-pkgconfig.patch,
  -files/shiboken-fix-pkgconfig.patch:
  Version bump, remove old and update patch

*shiboken-0.5.0-r1 (03 Nov 2010)
