@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/shiboken
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/shiboken/ChangeLog,v 1.14 2011/12/27 09:03:20 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/shiboken/ChangeLog,v 1.15 2011/12/27 09:06:01 patrick Exp $
+
+  27 Dec 2011; Patrick Lauer <patrick@gentoo.org> -shiboken-1.0.9.ebuild:
+  Remove unneeded version
 
 *shiboken-1.0.10 (27 Dec 2011)
 
